import module-asynchronous_machine (Reinhard Resch)

--- a/mbdyn/mbdyn/base/Makefile.am
+++ b/mbdyn/mbdyn/base/Makefile.am
@@ -178,7 +178,9 @@ if BUILD_STATIC_MODULES
 # wheel2
 nodist_libbase_la_SOURCES += \
 $(srcdir)/../../modules/module-wheel2/module-wheel2.cc \
-$(srcdir)/../../modules/module-wheel2/module-wheel2.h
+$(srcdir)/../../modules/module-wheel2/module-wheel2.h \
+$(srcdir)/../../modules/module-asynchronous_machine/module-asynchronous_machine.cc \
+$(srcdir)/../../modules/module-asynchronous_machine/module-asynchronous_machine.h
 
 # add more...
 endif
