note Ubuntu's libudunits2

--- a/mbdyn/modules/module-udunits/Makefile.inc
+++ b/mbdyn/modules/module-udunits/Makefile.inc
@@ -1,3 +1,8 @@
 ## $Header$
 MODULE_DEPENDENCIES=
+#
+# "Historical" library
 MODULE_LINK=-ludunits
+#
+# Ubuntu distributes a libudunits2-dev that needs -ludunits2
+#MODULE_LINK=-ludunits2
