--- a/mbdyn/configure.ac
+++ b/mbdyn/configure.ac
@@ -434,8 +434,8 @@ dnl
 dnl Sort out defines
 dnl
 dnl !!! set to "no" before release !!!
-MBDYN_DEVEL=yes
-dnl MBDYN_DEVEL=no
+dnl MBDYN_DEVEL=yes
+MBDYN_DEVEL=no
 if test x"$MBDYN_DEVEL" = x"yes" ; then 
 	AC_DEFINE(MBDYN_DEVEL,1,[define to enable features under development])
 fi
