--- a/mbdyn/mbdyn/struct/Makefile.am
+++ b/mbdyn/mbdyn/struct/Makefile.am
@@ -75,6 +75,13 @@ rodj.cc \
 rodj.h \
 shapefnc.cc \
 shapefnc.h \
+shell.cc \
+shell.h \
+shell.hc \
+shelleasans.cc \
+shelleasans.h \
+shelleas.cc \
+shelleas.h \
 socketstreammotionelem.cc \
 socketstreammotionelem.h \
 spherj.cc \
@@ -132,18 +139,6 @@ if MBDYN_DEVEL
 nodist_libstruct_la_SOURCES += \
 screwjoint.h \
 screwjoint.cc
-endif
-
-# shell
-if MBDYN_DEVEL
-nodist_libstruct_la_SOURCES += \
-shell.cc \
-shell.h \
-shell.hc \
-shelleasans.cc \
-shelleasans.h \
-shelleas.cc \
-shelleas.h
 endif
 
 libstruct_la_LIBADD = @LIBS@
