--- a/mbdyn/configure.ac
+++ b/mbdyn/configure.ac
@@ -393,6 +393,7 @@ dnl
 AC_STDC_HEADERS
 AC_CHECK_HEADERS(arpa/inet.h)
 AC_CHECK_HEADERS(atomic_ops.h)
+AC_CHECK_HEADERS(cxxabi.h)
 AC_CHECK_HEADERS(getopt.h)
 AC_CHECK_HEADERS(netdb.h)
 AC_CHECK_HEADERS(netinet/in.h)
