allow custom include path

--- a/mbdyn/modules/Makefile.module
+++ b/mbdyn/modules/Makefile.module
@@ -43,11 +43,11 @@ lib$(MBDYN_MODULE).la: $(MODULE_DEPENDENCIES) $(MBDYN_MODULE).lo
 
 %.lo: %.cc
 	$(MAKE) clean-so
-	$(LTCXXCOMPILE) -o $@ -I$(MBDYN_MODULE_SRCDIR) -DMBDYN_MODULE -c $<
+	$(LTCXXCOMPILE) -o $@ -I$(MBDYN_MODULE_SRCDIR) $(MODULE_INCLUDE) -DMBDYN_MODULE -c $<
 
 %.lo: %.c
 	$(MAKE) clean-so
-	$(LTCOMPILE) -o $@ -I$(MBDYN_MODULE_SRCDIR) -DMBDYN_MODULE -c $<
+	$(LTCOMPILE) -o $@ -I$(MBDYN_MODULE_SRCDIR) $(MODULE_INCLUDE) -DMBDYN_MODULE -c $<
 
 %.lo: %.f90
 	$(MAKE) clean-so
