--- a/mbdyn/mbdyn/Makefile.am
+++ b/mbdyn/mbdyn/Makefile.am
@@ -43,8 +43,6 @@ $(GINACLIB_LIBS) \
 @SUPERLU_LIBS@ \
 @TAUCS_LIBS@ \
 @MPI_LIBS@ \
-@BLAS_LIBS@ \
-@FCLIBS@ \
 @CHACO_LIBS@ \
 @METIS_LIBS@ \
 @SECURITY_LIBS@ \
@@ -53,6 +51,9 @@ $(GINACLIB_LIBS) \
 @UDUNITS_LIBS@ \
 @RT_LIBS@ \
 @ANN_LIBS@ \
+@OCTAVE_LIBS@ \
+@BLAS_LIBS@ \
+@FCLIBS@ \
 @LIBS@ \
 $(GINACLIB_LIBS)
 
